<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">欢乐万家</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="string_message">购物车</string>
    <string name="string_index">首页</string>
    <string name="string_find">发现</string>
    <string name="string_mine">我的</string>
    <string name="login_username">请输入手机号</string>
    <string name="login_Cipher">请输入6-16位密码</string>
    <string name="login_Prompt">用户名与密码不匹配</string>
    <string name="Prompt1">请保持手机畅通，以便及时接受验证码</string>
    <string name="login_login">立即登录</string>
    <string name="login_login1">登录</string>
    <string name="login_Registered">快速注册</string>
    <string name="Registered">我要上架</string>
    <string name="Search">搜索</string>
    <string name="reset_password">重置密码</string>
    <string name="login_Forget_the_password">忘记密码？</string>
    <string name="Registered_Next">下一步</string>
    <string name="verification_code">重新获取</string>
    <string name="verification_code1">请输入短信验证码</string>
    <string name="Cipher">请输入登录密码</string>
    <string name="Cumulative">累计收入：</string>
    <string name="This_month">本月收入：</string>
    <string name="Receivables">我要收款</string>
    <string name="Extension">我要推广</string>
    <string name="The_goods">我要上货</string>
    <string name="Order">订单管理</string>
    <string name="Customer">客户管理</string>
    <string name="Shop">店铺管理</string>
    
	<string name="xlistview_header_hint_normal">下拉刷新</string>
	<string name="xlistview_header_hint_ready">释放刷新</string>
	<string name="xlistview_header_hint_loading">正在加载…</string>
	<string name="xlistview_header_last_time">最后更新时间：</string>
	<string name="xlistview_footer_hint_normal">查看更多</string>
	<string name="xlistview_footer_hint_ready">松开载入更多</string>
	
	<string name="Recommend">推荐</string>
	<string name="Newest">最新</string>
	<string name="Sales_volume">销量</string>
	<string name="Price">价格</string>
	<string name="Commission">佣金</string>
	
	<string name="e0_string1">待发货</string>
	<string name="e0_string2">未付款</string>
	<string name="e0_string3">未收货</string>
	<string name="e0_string4">已取消</string>
	<string name="e0_string5">已完成</string>
    

</resources>
