<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f1f1f1"
    android:orientation="vertical" >

    <include layout="@layout/title_layout"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:background="#d7d7d7" />

    <TextView
        android:id="@+id/tv_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:text="@string/Prompt1"
        android:textColor="#cccccc"
        android:textSize="15dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:background="#f1f1f1"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/et_editext"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="#ffffff"
            android:digits="1234567890"
            android:hint="@string/verification_code1"
            android:inputType="number"
            android:maxLength="4"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:singleLine="true"
            android:textColor="#cccccc"
            android:textSize="15dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="#ffffff"
            android:gravity="center" >

            <ImageView
                android:id="@+id/iv_delete"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@mipmap/ic_delete"
                android:visibility="gone" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_verificationcode"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="#f14f4f"
            android:gravity="center"
            android:text="@string/verification_code"
            android:textColor="#ffffff"
            android:textSize="17dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_next"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginTop="20dp"
        android:background="#f14f4f"
        android:gravity="center"
        android:text="@string/Registered_Next"
        android:textColor="#ffffff"
        android:textSize="20dp" />

</LinearLayout>