<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#f1f1f1"
    android:orientation="vertical">

    <include layout="@layout/title_layout"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:orientation="horizontal"
        android:background="#ffffff" >
        
        <ImageView 
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/ic_a0_user"
            />
        <TextView
            android:layout_width="1dp"
            android:layout_height="25dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_gravity="center_vertical"
            android:background="#666666"/>
        
       <EditText
           android:id="@+id/et_a0_name"
           android:layout_width="200dp"
           android:layout_height="48dp"
           android:layout_gravity="center_vertical"
           android:background="#ffffff"
           android:hint="@string/login_username"
           android:maxLength="20"
           android:paddingLeft="10dp"
           android:paddingRight="10dp"
           android:singleLine="true"
           android:textColor="#333333"
           android:textSize="17sp" />

      <ImageView
           android:id="@+id/iv_a0_delete"
           android:layout_width="20dp"
           android:layout_height="20dp"
           android:layout_marginLeft="5dp"
           android:visibility="gone"
           android:layout_gravity="center"
           android:src="@mipmap/ic_delete"/>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:orientation="horizontal"
        android:background="#ffffff" >
        
        <ImageView 
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/ic_a0_password"
            />
        <TextView
            android:layout_width="1dp"
            android:layout_height="25dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_gravity="center_vertical"
            android:background="#666666"/>
        
       <EditText
           android:id="@+id/et_a0_password"
           android:layout_width="200dp"
           android:layout_height="40dp"
           android:layout_gravity="center_vertical"
           android:background="#ffffff"
           android:hint="@string/login_Cipher"
           android:maxLength="20"
           android:paddingLeft="10dp"
           android:paddingRight="10dp"
           android:singleLine="true"
           android:textColor="#999999"
           android:password="true"
           android:textSize="17sp" />

       <ImageView
           android:id="@+id/iv_a0_delete1"
           android:layout_width="20dp"
           android:layout_height="20dp"
           android:layout_marginLeft="5dp"
           android:visibility="gone"
           android:layout_gravity="center"
           android:src="@mipmap/ic_delete"/>
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/prompt" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:visibility="gone"
        android:orientation="horizontal">
       
        <TextView 
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:background="@drawable/background_fillet_red"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:text="!"/>
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:textColor="#e00000"
        android:textSize="16sp"
        android:text="@string/login_Prompt"/>
    </LinearLayout>
    
    <TextView
        android:id="@+id/tv_a0_next"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:background="#f24f50"
        android:textColor="#ffffff"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/login_login"/>
    
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginLeft="18dp"
        android:orientation="horizontal">
        
        <TextView
            android:id="@+id/tv_a0_registered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#666666"
            android:textSize="14sp"
            android:text="@string/login_Registered"/>
        
        <TextView
            android:id="@+id/tv_a0_tback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textColor="#666666"
            android:textSize="14sp"
            android:text="@string/login_Forget_the_password"/>
    </RelativeLayout>

</LinearLayout>
