<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#f1f1f1" >

    <include layout="@layout/title_layout"/>

	<TextView 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="18dp"
	    android:layout_marginRight="18dp"
	    android:layout_marginTop="20dp"
	    android:layout_marginBottom="20dp"
	    android:gravity="center_vertical"
	    android:textSize="15dp"
	    android:textColor="#cccccc"
	    android:text="@string/Prompt1"
	    />
	
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:orientation="horizontal"
        android:background="#ffffff" >

       <EditText
           android:id="@+id/et_a1_name"
           android:layout_width="wrap_content"
           android:layout_height="match_parent"
           android:layout_gravity="center_vertical"
           android:background="#ffffff"
           android:hint="@string/login_username"
           android:layout_weight="4"
           android:maxLength="11"
           android:paddingLeft="10dp"
           android:paddingRight="10dp"
           android:digits="1234567890"
           android:inputType="number"
           android:singleLine="true"
           android:textColor="#000000"
           android:textSize="17dp" />
       
        <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:background="#ffffff"
        android:gravity="center" >

       <ImageView
           android:id="@+id/iv_a1_delete"
           android:layout_width="20dp"
           android:layout_height="20dp"
           android:visibility="gone"
           android:layout_toRightOf="@+id/login_name"
           android:src="@mipmap/ic_delete" />

    </LinearLayout>
    </LinearLayout>
    <TextView 
        android:id="@+id/tv_a1_next"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:background="#f14f4f"
        android:textColor="#ffffff"
        android:gravity="center"
        android:textSize="20dp"
        android:text="@string/Registered_Next"/>
</LinearLayout>
